# bookstore

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
